--- a/src/index.css
+++ b/src/index.css
@@ -373,7 +373,7 @@
 
 
     --portfolio-banner: linear-gradient(to right, #f0f2f0, #000c40);
-    --swap-bg: url('./assets/images/backgrounds/swap_bg_sepolia.jpg');
+    --swap-bg: transparent;
     --title-gradient: #19222d;
 
     /* font weight */
@@ -418,6 +418,7 @@
     --color-border: transparent;
     --page-bg: #eef1f6;
     --content-container-bg: url('./assets/images/backgrounds/swap_bg_sepolia.jpg');
+    
    
 }
 
