seperate completed and uncomplted content

--- a/src/components/Futa/TickerComponent/TickerComponent.module.css
+++ b/src/components/Futa/TickerComponent/TickerComponent.module.css
@@ -26,6 +26,15 @@
     
 }
 
+.justifyBetween{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 8px;
+    
+}
+
 .tickerContainer {
     display: flex;
     flex-direction: column;
