--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -257,6 +257,39 @@
     padding: 0 12px;
 }
 
+.noAuctionsContent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    padding: 2rem 0;
+}
+
+.noAuctionsContent p{
+    color: var(--text2)
+}
+
+.noAuctionsContent button{
+    display: flex;
+    padding: 2px 8px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    outline: none;
+    background: var(--accent1, #0ccdff);
+    color: var(--dark1);
+    border: none;
+    cursor: pointer;
+    transition: all var(--animation-speed) ease-in-out;
+    margin: 0 auto;
+    text-transform: uppercase;
+}
+
+
+.noAuctionsContent button:hover{
+    background: var(--accent2)
+}
 @media (min-width: 780px){
     .container{
         display: grid;
