height changes on comment panels for mobile

--- a/src/components/Futa/Comments/Comments.module.css
+++ b/src/components/Futa/Comments/Comments.module.css
@@ -188,12 +188,12 @@
 
       
   .mainContainer{
-    height: calc(100dvh - 250px);
+    height: calc(100svh - 240px);
   }
 
   
   .commentsWrapper{
-    max-height: 65vh;
+    max-height: 63svh;
   }
 
     }
