add margin to all fetched msg

--- a/src/components/Futa/Comments/Comments.module.css
+++ b/src/components/Futa/Comments/Comments.module.css
@@ -195,9 +195,9 @@
 
       
     .all_fetched{
-      margin-top: 6svh;
+      margin-top: calc(6svh + 2rem); 
     }
-    
+
   .mainContainer{
     height: calc(100svh - 240px);
   }
