all fetched msg margin fix for desktop, connect button changed for comments panel

--- a/src/components/Futa/Comments/CommentInput/CommentInput.module.css
+++ b/src/components/Futa/Comments/CommentInput/CommentInput.module.css
@@ -45,9 +45,11 @@
 
     .connect_to_chat_placeholder{
         color: rgba(255,255,255, .3);
+        background-color: var(--dark3);
+        color: black;
+        background: var(--accent1   );
         padding: .5rem;
         text-align: center;
-        background-color: var(--dark3);
         cursor: pointer;
     }
 
