--- a/src/components/Futa/Comments/Comments.module.css
+++ b/src/components/Futa/Comments/Comments.module.css
@@ -191,6 +191,22 @@
     opacity: 0.3;
     }
 
+    .unread_messages_info{
+      position: absolute;
+      bottom: 3rem;
+      left: 50%;
+      transform: translateX(-50%);
+      right: 0;
+      padding: .3rem;
+      color: var(--text1);
+      background: rgba(255,255,255, .1);
+      text-align: center;
+      border-radius: .3rem;
+      cursor: pointer;
+      backdrop-filter: blur(5px);
+      border: 1px solid rgba(255,255,255, .1);
+    }
+
     @media only screen and (max-width: 600px){
 
       
