fixes for new messages btn, idle mode message fetcher

--- a/src/components/Futa/Comments/Comments.module.css
+++ b/src/components/Futa/Comments/Comments.module.css
@@ -7,6 +7,10 @@
     }
   }
 
+  .comments_outer{
+    position: relative;
+  }
+
   .mainContainer{
     height: calc(100svh - 170px);
     display: flex;
