filtering emojis from dom fields aria-label

--- a/src/components/Chat/MessagePanel/InputBox/MessageInput.module.css
+++ b/src/components/Chat/MessagePanel/InputBox/MessageInput.module.css
@@ -359,3 +359,11 @@
 section[class^="emoji-scroll-wrapper"]{
     scroll-behavior: auto;
 }
+
+.hidden_picker_wrapper{
+
+    position: fixed;
+    top: 3rem;
+    left: 50%;
+    
+}
