--- a/src/components/Chat/MessagePanel/SentMessagePanel/SentMessagePanel.module.css
+++ b/src/components/Chat/MessagePanel/SentMessagePanel/SentMessagePanel.module.css
@@ -896,9 +896,17 @@
     word-break: break-word;
 }
 
+.message_block.only_emoji{
+    line-height: normal !important;
+}
+
 
 .message_token{
     margin-right: 1px;
+}
+
+.only_emoji{
+    font-size: 2rem;
 }
 
 .link_token{
