--- a/src/components/Futa/Navbar/Navbar.module.css
+++ b/src/components/Futa/Navbar/Navbar.module.css
@@ -23,6 +23,8 @@
     background: var(--dark2, #12121a);
 }
 
+
+
 .rightContainer {
     display: flex;
     flex-direction: row;
@@ -57,6 +59,21 @@
 
 .linkContainer:hover {
     color: var(--text1);
+}
+
+.skipAnimationContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+
+    color: var(--text1, #f0f0f8);
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: -0.36px;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .version {
