--- a/src/components/Chat/ChatPanel.module.css
+++ b/src/components/Chat/ChatPanel.module.css
@@ -339,25 +339,34 @@
 }
 
 .reaction_picker_wrapper{
+    transition: opacity .2s ease-in-out, max-width .2s ease-in-out;
     display: block;
     position: absolute;
     transform: scale(0);
     bottom: 10%;
-    width: 90%;
-    height: 55%;
+    width: 96%;
     z-index: 1;
-    left: 5%;
+    left: auto;
+    right: 2%;
     animation: scaleAnim .3s ease-in-out forwards;
     box-shadow: 0px 0px 40px color-mix(in srgb, var(--accent1) 20%, transparent);
-    border: 1px solid color-mix(in srgb, var(--accent1) 66%, transparent);
     overflow: hidden;
-    border-radius: .5rem;
+    border-radius: 100vw;
     z-index: 4;
     opacity: 0;
     background: var(--dark2);
-    /* height: 4rem; */
+    overflow: hidden;
+    max-width: 0;
+    border: none;
+} 
 
+.reaction_picker_wrapper.active{
+    max-width: 96%;
+    border: 1px solid color-mix(in srgb, var(--accent1) 66%, transparent);
+    opacity: 1;
 }
+
+
 
 
 .reaction_picker_close{
@@ -370,6 +379,7 @@
     cursor: pointer;
     padding-bottom: 0;
     opacity: .5;
+    margin-top: .2rem;
     cursor: pointer;
     transition: all .2s ease-in-out;
 }
