--- a/src/pages/platformFuta/Home/Animations/Animations.module.css
+++ b/src/pages/platformFuta/Home/Animations/Animations.module.css
@@ -82,6 +82,10 @@ max-width: 50%;
 
 @media (max-width: 760px) {
 
+    .actionButtonContent{
+        flex-direction: row;
+    }
+
     .terminalContainer, .output {
        
         font-size: 12px !important; 
@@ -110,3 +114,70 @@ max-width: 50%;
    margin-top: 100px;
 }
 }
+
+/* ---------EXPLORE AND LEARN BUTTON---------- */
+
+.actionButtonContent {
+  
+    z-index: 2;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 2rem 0;
+  
+}
+
+.actionButtonContent a, .actionButtonContent button {
+    display: flex;
+    width: 180px !important;
+    height: 57px !important;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border: 1px solid transparent;
+
+    font-family: "Roboto Mono";
+    font-style: normal;
+    line-height: normal;
+    font-weight: 400;
+    font-size: 36px;
+    text-transform: uppercase;
+    text-align: center;
+
+    transition: all var(--animation-speed) ease-in-out;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+
+
+
+
+
+.exploreButton {
+    background: var(--accent1, #0CCDFF);
+    color: var(--dark1, #06060C);
+}
+
+.exploreButton:hover {
+    background: transparent;
+    border: 1px solid var(--accent1);
+    color: var(--accent1);
+}
+
+.learnButton {
+    background: var(--accent2, #073749);
+    color: var(--accent1, #0CCDFF);
+}
+
+.learnButton:hover {
+    background: transparent;
+    border: 1px solid var(--accent1);
+}
+
+
