--- a/src/pages/platformFuta/Home/FutaLandings/FutaLanding.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/FutaLanding.module.css
@@ -61,8 +61,10 @@ font-weight: 400;
     .container {
      display: grid;
      grid-template-columns: auto 1fr;
-      padding: 32px 64px;
-      gap: 27.75px
+     height: 100vh;
+      /* padding: 32px 64px; */
+      gap: 27.75px;
+    
     }
 
     .imageContainer{
@@ -83,7 +85,7 @@ font-weight: 400;
   @media (min-width: 1080px) {
     .container {
        
-        padding: 64px 128px;
+        /* padding: 64px 128px; */
         gap: 55.5px;
        }
 
@@ -101,7 +103,8 @@ font-weight: 400;
   @media (min-width: 1500px) {
     .container {
        
-         padding: 128px 256px;
+         /* padding: 128px 256px; */
+
          gap: 111px;
        }
        .imageContainer{
