--- a/src/pages/platformFuta/Home/FutaLandings/FutaLanding.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/FutaLanding.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
 
     
-    padding: 1rem;
+    padding: 0 3rem;
     text-align: start;
   }
   
@@ -62,7 +62,7 @@ font-weight: 400;
      display: grid;
      grid-template-columns: auto 1fr;
      height: 100vh;
-      /* padding: 32px 64px; */
+      padding: 0 64px;
       gap: 27.75px;
     
     }
@@ -85,7 +85,7 @@ font-weight: 400;
   @media (min-width: 1080px) {
     .container {
        
-        /* padding: 64px 128px; */
+     
         gap: 55.5px;
        }
 
@@ -103,7 +103,7 @@ font-weight: 400;
   @media (min-width: 1500px) {
     .container {
        
-         /* padding: 128px 256px; */
+         padding: 0 86px;
 
          gap: 111px;
        }
