--- a/src/pages/platformAmbient/Trade/TradeCharts/TradeCharts.module.css
+++ b/src/pages/platformAmbient/Trade/TradeCharts/TradeCharts.module.css
@@ -3,6 +3,15 @@
     justify-content: flex-end;
     align-items: flex-end;
 }
+
+.futa_chart_overlay_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 4px;
+    gap: 10px;
+}
+
 .chart_tooltips {
     display: flex;
     flex-direction: row;
@@ -75,4 +84,38 @@
 
 .non_active_selected_button {
     color: var(--text2);
+}
+
+.futa_active_selected_button,
+.futa_non_active_selected_button {
+    background: var(--dark2);
+    transition: var(--transition);
+    cursor: pointer;
+    font-size: var(--body-size);
+    line-height: var(--body-lh);
+    color: var(--text2);
+    text-align: center;
+    outline: none;
+    position: relative;
+
+    width: 49px;
+    height: 25px;
+    padding: 4px 16px 4px 16px;
+
+    border: none;
+    padding: 1px 8px;
+    position: relative;
+}
+
+.futa_active_selected_button:hover,
+.futa_non_active_selected_button:hover {
+    background-color: var(--dark3);
+    color: var(--text1);
+}
+
+.futa_active_selected_button {
+    width: 100%;
+    height: 100%;
+    color: var(--accent1);
+    border: 1px solid var(--accent1);
 }
