--- a/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
+++ b/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
@@ -1,7 +1,7 @@
 .mainSection {
     display: grid;
-    gap: initial;
-    grid-template-columns: auto 390px;
+    gap: 8px;
+    grid-template-columns: auto 4px  390px;
     padding: 0 8px;
     height: 100%;
     height: calc(100dvh - 75px);
@@ -14,7 +14,10 @@
     align-items: center; */
     width: 100%;
     height: 100%;
+    height: calc(100dvh - 75px);
+
     background: var(--dark3);
+   
 
      background: linear-gradient(
         90deg,
