swap comments module

--- a/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
+++ b/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
@@ -58,3 +58,12 @@
         background-position: -100% 0;
     }
 }
+
+.comments_wrapper{
+    right: 1rem;
+    position: absolute;
+    width: 24rem;
+    bottom: 0;
+    height: 50vh;
+    display: block;
+}
