--- a/src/pages/Trade/TradeCharts/TradeChartsComponents/VolumeTVLFee.module.css
+++ b/src/pages/Trade/TradeCharts/TradeChartsComponents/VolumeTVLFee.module.css
@@ -48,6 +48,7 @@
     padding: 2px 8px;
     border-radius: var(--border-radius);
     border: 1px solid var(--dark3);
+    font-size: 12px;
 }
 
 .dropdown_menu {
