--- a/src/pages/Trade/TradeCharts/TradeCharts.module.css
+++ b/src/pages/Trade/TradeCharts/TradeCharts.module.css
@@ -32,6 +32,7 @@
     color: var(--text2);
     height: 15px;
     padding-left: 4px;
+    display: none;
 }
 
 .active_selected_button,
@@ -64,6 +65,11 @@
     .non_active_selected_button:hover {
         /* background: var(--title-gradient); */
         color: var(--text1);
+    }
+
+
+    .current_data_info{
+        display: flex;
     }
 }
 
