display percent change in FUTA tx configurator

--- a/src/components/Form/TokenInputQuantity.module.css
+++ b/src/components/Form/TokenInputQuantity.module.css
@@ -107,8 +107,8 @@
 .pulseAnimation {
     animation: shadow-pulse 1s 6;
 }
+
 .futaLayout {
-   
     display: grid;
     grid-template-columns: 70% 27%;
     gap: 8px;
@@ -119,40 +119,35 @@
 
 .futaLayoutLeft {
     background: var(--dark2, #111a1e);
+    height: 100%;
     display: flex;
     padding: 8px;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: flex-start;
     flex: 1 0 0;
     align-self: stretch;
     height: 70px;
-
-   
 }
 
 .futaLayoutLeft p {
     font-size: 14px;
     color: var(--text2);
 }
-.futaLayoutRight {
 
+.futaLayoutRight {
     height: 70px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     gap: 8px;
 }
 
 .futaLayoutRight button {
     background: var(--dark2, #111a1e);
-   
     outline: none;
     border: none;
-   
-   
 }
 
 .tokenButton{
