--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@
     /* border */
     --color-border: 1px solid var(--accent1);
     --border: #424649;
-    --border-radius: 4px;
+    --border-radius: 0;
     --swap-border: var(--title-gradient);
     --grey-light-border: 1px solid var(--text2);
     --navbar-border: transparent;
