--- a/src/pages/platformFuta/Account/Account.module.css
+++ b/src/pages/platformFuta/Account/Account.module.css
@@ -1,23 +1,20 @@
-.container{
+.container {
     width: 100%;
     height: calc(100svh - 154px);
     background: var(--dark1);
-   
-   
 
     display: flex;
-padding: 8px 16px;
-flex-direction: column;
-gap: 8px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-font-family: "Fira Mono";
-justify-content: space-between;
+    padding: 8px 16px;
+    flex-direction: column;
+    gap: 8px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    font-family: 'Fira Mono';
+    justify-content: space-between;
 }
 
-
-.content{
+.content {
     width: 100%;
     height: 100%;
     display: flex;
@@ -26,75 +23,71 @@ justify-content: space-between;
     gap: 8px;
 }
 
-.content h2{
-color: var(--text1, #CEFFFF);
-font-size: 24px;
-text-transform: uppercase;
+.content h2 {
+    color: var(--text1, #ceffff);
+    font-size: 24px;
+    text-transform: uppercase;
 }
 
-
-.claimAllContainer{
+.claimAllContainer {
     display: flex;
     flex-direction: column;
     gap: 8px;
 
-    
     /* padding-top: 2.7rem; */
-    
 }
 
-.claimAllContainer h3{
-    color: var(--text1, #CEFFFF);
-font-size: 20px;
+.claimAllContainer h3 {
+    color: var(--text1, #ceffff);
+    font-size: 20px;
 }
-.claimAllText{
+.claimAllText {
     padding: 0 16px;
-    }
-    
-    .claimAllContainer p{
+}
+
+.claimAllContainer p {
     color: var(--text2);
     font-size: 12px;
     text-align: center;
-
 }
 
-.extraFeeContainer{
+.extraFeeContainer {
     width: 100%;
-    border: 1px solid var(--dark3, #1E1E24);
+    border: 1px solid var(--dark3, #1e1e24);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding:  8px;
+    padding: 8px;
 }
 
-.alignCenter{
+.alignCenter {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 4px;
 }
 
-.claimButton{
+.claimButton {
     display: flex;
-padding: 2px 8px;
-justify-content: center;
-align-items: center;
-gap: 10px;
-align-self: stretch;
-outline: none;
-background: var(--accent1, #0ccdff);
-color: var(--dark1);
-border: none;
-cursor: pointer;
-transition: all var(--animation-speed) ease-in-out;
+    padding: 2px 8px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    outline: none;
+    background: var(--accent1, #0ccdff);
+    color: var(--dark1);
+    border: none;
+    cursor: pointer;
+    transition: all var(--animation-speed) ease-in-out;
 }
-.claimButton:hover{
+.claimButton:hover {
     background: var(--accent2);
     color: var(--dark1);
 }
 
-.disabledButton{
+.disabledButton {
     background: var(--dark4);
     color: var(--text2);
     pointer-events: none;
@@ -109,22 +102,18 @@ transition: all var(--animation-speed) ease-in-out;
     height: calc(100vh - 56px);
     gap: 16px;
 }
-.seperatorContainer{
-   
-    height: calc(100vh - 80px)
+.separatorContainer {
+    height: calc(100vh - 80px);
 }
 
-.rightLayout{
+.rightLayout {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 8px;
-  
-    
 }
 
-
-.connectWalletContent{
+.connectWalletContent {
     width: 100%;
     height: calc(100vh - 56px);
     gap: 16px;
@@ -135,14 +124,8 @@ transition: all var(--animation-speed) ease-in-out;
     align-items: center;
 }
 
-
-
-
-
-
-.connectWalletContent button, .connectWalletContent a{
-   
-    
+.connectWalletContent button,
+.connectWalletContent a {
     display: flex;
     padding: 2px 8px;
     justify-content: center;
@@ -156,34 +139,32 @@ transition: all var(--animation-speed) ease-in-out;
     transition: all var(--animation-speed) ease-in-out;
     cursor: pointer;
     outline: none;
-   
+
     margin: 0 auto;
-    
 }
 
-.connectWalletContent a{
-    color: var(--dark1)
+.connectWalletContent a {
+    color: var(--dark1);
 }
 
-.connectWalletContent button:hover, .connectWalletContent a:hover{
+.connectWalletContent button:hover,
+.connectWalletContent a:hover {
     background: var(--accent2);
     color: var(--dark1);
 }
 
-.justifyRow{
+.justifyRow {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-
 @media (max-width: 780px) {
-
-.claimAllContainer h3{
-    text-align: center;
-}
-.claimButton{
-    margin: 5px 0;
-}
+    .claimAllContainer h3 {
+        text-align: center;
+    }
+    .claimButton {
+        margin: 5px 0;
+    }
 }
