boundry change checker added to adaptive height change on comments in swap page

--- a/src/components/Futa/Comments/Comments.module.css
+++ b/src/components/Futa/Comments/Comments.module.css
@@ -15,6 +15,7 @@
   
 
   .mainContainer{
+    transition: all .2s ease-in-out;
     height: calc(100svh - 170px);
     display: flex;
     flex-direction: column;
