--- a/src/components/Futa/Comments/CommentCard/CommentCard.module.css
+++ b/src/components/Futa/Comments/CommentCard/CommentCard.module.css
@@ -21,8 +21,8 @@
 }
 
 .comment_card_wrapper{
-    margin-top: .6rem;
-    padding-top: .6rem;
+    margin-top: .3rem;
+    padding-top: .3rem;
     position: relative;
     border-top: 1px solid rgba(255,255,255, .1);
     opacity: 0;
@@ -43,7 +43,7 @@
     .comment_card_wrapper.basic_card{
         border: none;
         margin: 0;
-        padding: .2rem 0;
+        padding: 0;
     }
     .comment_card_wrapper:last-child{
         border-bottom: 1px solid rgba(255,255,255, .1);
@@ -53,15 +53,15 @@
 
 .comment_top_info{
     width: 100%;
-    padding-top: 1rem;
-    padding-bottom: .5rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
     text-align: center;
     opacity: .3;
     
 }
 .comment_sender_info{
     color: var(--accent1);
-    margin-bottom: .3rem;
+    margin-bottom: 0rem;
     cursor: pointer;
 }
 
