Revert "add and update scrollbars for transaction tables"

--- a/src/components/Global/DropdownSearch/DropdownSearch.module.css
+++ b/src/components/Global/DropdownSearch/DropdownSearch.module.css
@@ -23,6 +23,8 @@
 .dropdown_content {
     display: flex;
     width: 340px;
+    overflow-y: scroll;
+
     flex-direction: column;
 
     gap: 8px;
