--- a/src/pages/Swap/Swap.module.css
+++ b/src/pages/Swap/Swap.module.css
@@ -11,8 +11,16 @@
     height: calc(100vh - 56px);
 
 }
-
 .swap_page_container > section {
-    margin-top: 64px;
+    margin-top: 16px;
     height: auto;
+}
+
+
+@media only screen and (min-width: 768px) {
+    .swap_page_container > section {
+        margin-top: 64px;
+       
+    }
+
 }
