add scrollbars to rest of pages

--- a/src/pages/Level/Level.module.css
+++ b/src/pages/Level/Level.module.css
@@ -7,8 +7,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    min-height: 80vh;
-    overflow-y: scroll;
+    height: calc(100vh - 86px);
+    overflow-y: hidden;
 }
 
 .option_button {
