--- a/src/App/App.css
+++ b/src/App/App.css
@@ -16,23 +16,7 @@
 /* Firefox */
 
 
-body::-webkit-scrollbar {
-    display: none;
-}
 
-body::-webkit-scrollbar-track {
-    background: transparent; /* opacity: 0; should do the thing either */
-}
-body::-webkit-scrollbar-thumb {
-    background: linear-gradient(
-        0deg,
-        var(--accent1) 0%,
-        var(--accent5) 49.48%,
-        var(--accent1) 100%
-    );
-
-    box-shadow: 0px 0px 0px 100000vh black;
-}
 body {
     background: var(--dark1);
 }
@@ -240,13 +224,12 @@ input[type='number'] {
     -moz-appearance: textfield;
 }
 .custom_scroll_ambient {
-    height: 400px; /* Adjust the height as needed */
     overflow-y: scroll !important;
   }
-   .custom_scroll_ambient::-webkit-scrollbar {
-    width: 12px !important; /* Adjust the width as needed */
+   .custom_scroll_ambient::-webkit-scrollbar, .content-container::-webkit-scrollbar {
+    width: 8px !important; /* Adjust the width as needed */
   }
-   .custom_scroll_ambient::-webkit-scrollbar-thumb {
+   .custom_scroll_ambient::-webkit-scrollbar-thumb, .content-container::-webkit-scrollbar-thumb {
     border: 2px solid transparent !important; /* Space for the border */
     background-clip: padding-box !important; /* Create space for the border */
     border-radius: 8px !important; /* Adjust the border radius as needed */
@@ -261,7 +244,7 @@ input[type='number'] {
     background-clip: content-box, border-box !important; /* Clip the border to show gradient */
     min-height: 50px !important; /* Set the minimum height for the scrollbar thumb */
   }
-   .custom_scroll_ambient::-webkit-scrollbar-track {
+   .custom_scroll_ambient::-webkit-scrollbar-track, .content-container::-webkit-scrollbar-track {
     background: #06060C !important; /* Background color of the scrollbar track */
     border-radius: 8px !important; /* Adjust the border radius as needed */
     padding: 2px !important; /* Add padding to the track */
