--- a/src/components/Global/ContentContainer/ContentContainer.module.css
+++ b/src/components/Global/ContentContainer/ContentContainer.module.css
@@ -115,10 +115,12 @@
     }
 }
 
+
 @media only screen and (max-width: 600px) {
     .main_content {
         overflow-y: scroll;
-       height: 500px !important;
+       min-height: 50dvh;
+       max-height: 70vh;
        padding: 8px !important;
        box-shadow: none;
     }
