--- a/src/pages/Trade/TradeCharts/TradeCharts.module.css
+++ b/src/pages/Trade/TradeCharts/TradeCharts.module.css
@@ -7,9 +7,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    text-wrap: wrap;
     align-items: center;
 }
 
@@ -19,20 +17,20 @@
     font-family: 'Lexend Deca';
     font-style: normal;
     font-weight: 300;
-    font-size: var(--body-size);
+    font-size: var(--mini-size);
     line-height: var(--mini-lh);
 
     /* text/grey light */
+    text-wrap: wrap;
 
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 4px;
+    /* gap: 4px; */
 
     color: var(--text2);
-    height: 15px;
+    min-height: 30px;
     padding-left: 4px;
-    display: none;
 }
 
 .active_selected_button,
@@ -69,7 +67,7 @@
 
 
     .current_data_info{
-        display: flex;
+        font-size: var(--body-size);
     }
 }
 
