--- a/src/pages/platformAmbient/Trade/TradeCharts/TradeChartsComponents/VolumeTVLFee.module.css
+++ b/src/pages/platformAmbient/Trade/TradeCharts/TradeChartsComponents/VolumeTVLFee.module.css
@@ -5,7 +5,9 @@
     gap: 4px;
 }
 
-
+.volume_tvl_container button:focus-visible {
+    box-shadow: var(--glow-light-box-shadow);
+}
 
 .active_selected_button,
 .non_active_selected_button {
@@ -28,9 +30,6 @@
     background: var(--dark3);
     color: var(--text1);
 }
-.volume_tvl_container button:focus-visible {
-    box-shadow: var(--glow-light-box-shadow);
-}
 
 .active_selected_button {
     width: 100%;
@@ -39,6 +38,43 @@
 }
 
 .non_active_selected_button {
+    color: var(--text2);
+}
+
+.futa_active_selected_button,
+.futa_non_active_selected_button {
+    background: var(--dark2);
+    transition: var(--transition);
+    cursor: pointer;
+    font-size: var(--body-size);
+    line-height: var(--body-lh);
+    color: var(--text2);
+    text-align: center;
+    position: relative;
+
+    outline: none;
+    border: none;
+
+    height: 25px;
+    padding: 4px 16px 4px 16px;
+
+}
+
+.futa_active_selected_button:hover,
+.futa_non_active_selected_button:hover {
+    background-color: var(--dark3);
+    color: var(--accent1);
+}
+
+.futa_active_selected_button {
+    /* width: 100%;
+    height: 100%; */
+
+    color: var(--accent1);
+    border: 1px solid var(--accent1);
+}
+
+.futa_non_active_selected_button {
     color: var(--text2);
 }
 
