connection status disabled for mobile

--- a/src/components/Futa/Comments/Comments.module.css
+++ b/src/components/Futa/Comments/Comments.module.css
@@ -251,6 +251,10 @@
   .mainContainer{
     height: calc(100svh - 240px);
   }
+
+  .connection_status{
+    display: none;
+  }
   
   
   .mainContainer.tradePage{
@@ -259,7 +263,7 @@
 
   
   .commentsWrapper{
-    max-height: 60svh;
+    max-height: 64svh;
   }
 
   .tradePage .commentsWrapper{
