remove subscript f from non-futa no token logos

--- a/src/components/Global/NoTokenIcon/NoTokenIcon.module.css
+++ b/src/components/Global/NoTokenIcon/NoTokenIcon.module.css
@@ -11,7 +11,7 @@
     background: black;
     border-radius: 50%;
     color: var(--text1);
-    font-size: 18;
+    font-size: 18px;
     line-height: 20px;
     display: flex;
     justify-content: center;
@@ -19,7 +19,7 @@
     cursor: default;
 }
 
-.sub_container{
+.sub_container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,15 +27,16 @@
     height: 100%;
     font-weight: 400;
 }
-.sub_container p{
 
+.sub_container span {
+    font-size: 14px;
 }
 
-.sub_container sub{
+.sub_container sub {
     vertical-align: sub;
-    font-size: 12px;
+    font-size: 8px;
     align-items: flex-end;
     display: flex;
-  
+    margin-top: 4px;
     height: 100%;
 }
